2012-09-10  Sergii Stoian <stoyan255@gmail.com>

        * Source/NSFileManager.m:
        [createDirectoryAtPath:withIntermediateDirectories:attributes:error:]:
        Create directories only if it doesn't exist.

2012-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

        * Source/NSPropertyList.m (-storeString): Add missing variable
        declaration on big-endian systems.

2012-09-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m:
        Don't ignore whitespace in keys and values when parsing XML ... the
        DTD says everything apart from array and dict contains #PCDATA.

2012-09-05  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSScanner.m: Compatibility tweak reported by hns@computer.org
        A string like '1.2eX' where X is not a numeric exponent, needs to be
        scanned as a float/double up to (but not including) the 'e' (or 'E')
        rather than being treated as a badly formatted float/double.

2012-09-04  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSXMLDocument/cdata.m: New test case for CDATA.

2012-09-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m:
	* Source/NSBundle.m:
	* Source/NSPropertyList.m:
	* Source/NSProcessInfo.m:
	* Source/NSSocketPort.m:
	* Source/NSRunLoop.m:
	* Source/NSMessagePortNameServer.m:
	* Source/NSDistributedLock.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSZone.m:
	* Source/NSPage.m:
	* Source/NSMessagePort.m:
	* Source/NSUnarchiver.m:
	* Source/win32/GSFileHandle.m:
	* Source/NSFileManager.m:
	* Source/common.h:
	* Source/NSString.m:
	* Source/Additions/NSData+GNUstepBase.m:
	* Source/Additions/Unicode.m:
	* Source/Additions/NSMutableString+GNUstepBase.m:
	* Source/Additions/NSError+GNUstepBase.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSString+GNUstepBase.m:
	* Source/Additions/GCArray.m:
	* Source/Additions/GSXML.m:
	* Source/Additions/NSNumber+GNUstepBase.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/GSString.m:
	* Source/NSObjCRuntime.m: